--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 		</div>
 
 		<div class="main-feature">
-			<div class="features">
+			<div class="features container">
 				<div class="feature-list">
 					<div class="list-box">
 						<img src="img/ logo_sponsor/Icon.png" alt="Logo 1" class="icon">
