--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<nav>
-		<div class="container-fluid">
+		<div class="container-fluid container">
 			<a class="nav-title-link" href="#">
 				<h1 class="nav-title">Omega</h1>
 			</a>
@@ -55,8 +55,15 @@
 				<li class="nav-item">
 					<a href="#" class="nav-link">Support</a>
 				</li>
+				<li>
+					<a href="#" class="get-start">Get started</a>
+				</li>
 			</ul>
-			<a href="#" class="get-start">Get started</a>
+			<div class="mini-menu">
+				<button>
+					<img src="img/icons8-menu.svg" alt="mini icon">
+				</button>
+			</div>
 		</div>
 	</nav>
 	<main>
@@ -77,11 +84,34 @@
 		<div class="clients container">
 			<h3>Popular teams who use Omega for appoinments </h3>
 			<div class="client-items">
-				<img src="img/ logo_sponsor/logo 1.png" alt="logo1" class="client-item">
-				<img src="img/ logo_sponsor/logo 2.png" alt="logo2" class="client-item">
-				<img src="img/ logo_sponsor/logo 3.png" alt="logo3" class="client-item">
-				<img src="img/ logo_sponsor/logo 4.png" alt="logo4" class="client-item">
-				<img src="img/ logo_sponsor/logo 5.png" alt="logo5" class="client-item">
+				<ul>
+					<li>
+						<a href="">
+							<img src="img/ logo_sponsor/logo 1.png" alt="logo1" class="client-item">
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<img src="img/ logo_sponsor/logo 2.png" alt="logo2" class="client-item">
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<img src="img/ logo_sponsor/logo 3.png" alt="logo2" class="client-item">
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<img src="img/ logo_sponsor/logo 4.png" alt="logo2" class="client-item">
+						</a>
+					</li>
+					<li>
+						<a href="">
+							<img src="img/ logo_sponsor/logo 5.png" alt="logo2" class="client-item">
+						</a>
+					</li>
+				</ul>
+
 			</div>
 		</div>
 
@@ -153,7 +183,7 @@
 			</div>
 		</div>
 
-		<div class="testimonial container">
+		<div class="testimonial container">	
 			<h1>Customers are <br> loving our Omega</h1> <!-- So'rash kerak -->
 			<div class="testimonial-boxs">
 				<div class="testimonial-box">
